Update scripts which call transform